added dependencies and plugins for tests